# Zen

./: .clangd  .gitignore  CMakeLists.txt  NOTES  NOTES.md  README.md  TODO  TODO.md  build.json  build.py  configure.py  meson.build
patches/wlroots/: keyboard_enter.patch
resources/: conf.lua  conf.sh  config.lua  default-portals.conf  nested.lua  portals.conf  startup.lua  startup.sh
scripts/: deps.py  utils.py
src/: background.cpp  bind.cpp  borders.cpp  client.cpp  commands.cpp  core.hpp  dbus.cpp  debug.cpp  debug.hpp  input.cpp  ipc.cpp  log.cpp  log.hpp  main.cpp  output.cpp  pch.hpp  process.cpp  quartz.c  quartz.h  quartz.hpp  quartz_client.c  quartz_client.cpp  quartz_input.c  quartz_input.cpp  quartz_main.c  quartz_main.cpp  quartz_output.c  quartz_output.cpp  quartz_util.c  quartz_util.cpp  quartz_util.hpp  quartz_wlroots.h  quartz_xwayland.c  quartz_xwayland.cpp  quartz_zone.cpp  region.cpp  scene.cpp  script.cpp  seat.cpp  surface.cpp  (+7 more)
subprojects/: wlroots.wrap
